# MyTasks

./: README.md  task8-oracle11.sql
.github/workflows/: create_release.yml  publish.yaml
azure_operations/: Dockerfile.prod  README.md  pyproject.toml  requirements.azure.txt
azure_operations/src/azure_operations/: azure_connection.py  azure_container.py  copy.py  copy_model.py  url_container.py
azure_operations/test/: test_azure_connection.py  test_operation_container.py
task5/: Dockerfile  index.html  index.js  nginx.conf
task6/: README.md  arrays.bash  case.bash  debugging.bash  expansions.bash  functions.bash  hello.bash  if.bash  lists.bash  loops.bash  parameters.bash  variablse.bash
task7/: lab1.md  lab10.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md
task9/: summary.md
